--- a/validator/templates/validator/published_results.html
+++ b/validator/templates/validator/published_results.html
@@ -52,7 +52,9 @@
 
                             <div class="col-sm" style="text-align: right; max-width: 6.8rem;">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
+                                {% if current_user %}
                                 <button class="btn btn-sm btn-primary btn-action" title="Attach this validation to your list" onclick="ajax_copy_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span></button>
+                                {% endif %}
                             </div>
 
                         </div>
