--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -26,17 +26,17 @@
 
     <p>
         <b>Step 1</b> - Choose the data you would like to validate - including the dataset name, the version of the dataset,
-        and one of the soil moisture variables provided in the dataset. More details on the supported datasets can be found
-        <a href="{% url 'datasets' %}#data">here</a>.
+        and one of the soil moisture variables provided in the dataset. All the supported datasets are listed
+        <a routerLink="/datasets" pageScroll [pageScrollDuration]="1" href="#data">here</a>.
     </p>
     <img class="w3-round" src="assets/help_images/data_set_selections.png">
     <p>
         <b>Step 2 [optional]</b> - Choose the criteria by which you would like to filter this dataset.
         The filters available depend on the data contained within the chosen dataset. For example,
         you can filter the C3S data to include only data with no inconsistencies detected (flag = 0).
-        Details of the filter options provided for each dataset are given on the supported datasets page
-        <a href="{% url 'datasets' %}">here</a>. You can also hover your mouse pointer over the question mark next to a filter
-        to get a short explanation.
+        Details of the filter options provided for each dataset are given on the
+        <a routerLink="/datasets" pageScroll [pageScrollDuration]="1" href="#data">supported datasets page</a>. You can also
+        hover your mouse pointer over the question mark next to a filter to get a short explanation.
     </p>
     <p>
         <b>Step 3 [optional]</b> - If you want to intercompare several datasets, you can add more datasets to the validation
@@ -57,15 +57,14 @@
     <p>
         <b>Step 4</b> - Choose the reference dataset you would like to use for the
         validation including the dataset name, the version of the dataset, and the soil moisture variables provided in
-        the dataset. More details on the supported datasets can be found <a href="{% url 'datasets' %}#ref">here</a>.
+        the dataset.
     </p>
     <img class="w3-round" src="assets/help_images/reference_data_set_selections.png">
     <p>
         <b>Step 5 [optional]</b> - Choose the criteria by which you would like to filter the reference data prior to
         running the validation. The filters available depend on the data contained within the chosen dataset. For example,
         you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;.
-        Details of the filter options provided for each dataset are given on the supported datasets page
-        <a href="{% url 'datasets' %}">here</a>. You can also hover your mouse pointer over the question mark next to a filter
+        You can also hover your mouse pointer over the question mark next to a filter
         to get a short explanation.
     </p>
     <p>
@@ -92,7 +91,7 @@
         <b>Step 8 [optional]</b> - Choose the date range over which the validation should be performed. Accepted formats are: YYYY*MM*DD
         or DD*MM*YYYY where * can be any of &quot;.&quot;, &quot;/&quot; or &quot;-&quot;. If you don't provide a period it will be
         implicitly determined through temporal matching of the data and reference selected. For the time range covered by the various
-        datasets, see the <a href="{% url 'datasets' %}">datasets page</a>.
+        datasets, see the <a routerLink="/datasets" pageScroll [pageScrollDuration]="1" href="#data">datasets page</a>.
     </p>
     <img class="scaled_image mb-3" src="assets/help_images/validation_period.png">
 
@@ -152,22 +151,22 @@
 
     <ul>
         <li>
-            <span class="fas fa-ban"></span> The validation was cancelled.
+            <span class="pi pi-ban"></span> The validation was cancelled.
         </li>
         <li>
-            <span class="fas fa-running"></span> The validation is still running and has no results yet.
+            <span class="pi pi-spin pi-spinner"></span> The validation is still running and has no results yet.
         </li>
         <li>
-            <span class="fas fa-calendar-alt"></span> The validation has completed. It will be removed
+            <span class="pi pi-calendar"></span> The validation has completed. It will be removed
             by the auto-cleanup process {{ this.getExpiryPeriod() }} days after completion, unless you extend or archive it.
             You can see the expiration date by hovering your mouse over the icon.
         </li>
         <li>
-            <span class="fas fa-archive"></span> The validation has been archived and won't be automatically removed
+            <span class="pi pi-book"></span> The validation has been archived and won't be automatically removed
             by the cleanup process.
         </li>
         <li>
-            <span class="fas fa-exclamation-triangle"></span> The validation will expire within the next
+            <span class="pi pi-exclamation-triangle"></span> The validation will expire within the next
             {{ this.getWarningPeriod() }} days and will then be removed by the auto-cleanup process, unless you extend or archive it.
             You can see the expiration date by hovering your mouse over the icon.
         </li>
@@ -179,38 +178,39 @@
 
         <ul>
             <li>
-                <span class="fas fa-folder-open"></span> You can access the <a href="#results">results details
-                page</a> of a validation through its folder button.
+                <span class="pi pi-folder-open"></span> You can access the
+                <a pageScroll [pageScrollDuration]="1" href="#results">results details page</a>
+                of a validation through its folder button.
             </li>
             <li>
-                <span class="fas fa-stop"></span> The stop button is only visible while the validation is still
+                <span><fa-icon [icon]="faIcons.faStop"></fa-icon></span> The stop button is only visible while the validation is still
                 running and allows you to abort it.
             </li>
             <li>
-                <span class="fas fa-times"></span> The remove button is only visible once the validation has finished
+                <span class="pi pi-times"></span> The remove button is only visible once the validation has finished
                 or was aborted and will permanently delete the result.
             </li>
             <li>
-                <span class="fas fa-download"></span> The download graphs button allows you to download all graphs
+                <span class="pi pi-download"></span> The download graphs button allows you to download all graphs
                 produced for the validation (in png and svg formats) in a zip archive.
             </li>
             <li>
-                <span class="fas fa-file-download"></span> The download NetCDF button  allows you to download the
+                <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span> The download NetCDF button  allows you to download the
                 validation result (metrics computed).
             </li>
 
         <li>
-            <span class="fas fa-calendar-plus"></span> With the extend lifespan button, you can reset the auto-cleanup
+            <span class="pi pi-calendar-plus"></span> With the extend lifespan button, you can reset the auto-cleanup
             period of a result and thus postpone its automatic removal. You can use this if you're not sure yet whether
             you want to keep it - you will have another {{ this.getExpiryPeriod() }} days to decide and will be notified
             (again) before deletion.
         </li>
         <li>
-            <span class="fas fa-archive"></span> With the archive button, you can exclude a validation from auto-cleanup
+            <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span> With the archive button, you can exclude a validation from auto-cleanup
             and thus keep it indefinitely.
         </li>
         <li>
-            <span class="fas fa-calendar-alt"></span> With the un-archive button, you can make a validation eligible for
+            <span class="pi pi-calendar"></span> With the un-archive button, you can make a validation eligible for
             auto-cleanup again. It will be automatically extended, so you will have another {{ this.getExpiryPeriod() }} days before
             deletion and will be notified (again).
         </li>
@@ -232,28 +232,28 @@
 
     <ul>
         <li>
-            <span class="fas fa-times"></span> <span class="font-weight-bold">Remove</span> will permanently delete the result.
+            <span class="pi pi-times"></span> <span class="font-weight-bold"> Remove</span> will permanently delete the result.
         </li>
         <li>
-            <span class="fas fa-calendar-plus"></span> <span class="font-weight-bold">Renew</span> will reset the auto-cleanup
+            <span class="pi pi-calendar-plus"></span> <span class="font-weight-bold"> Renew</span> will reset the auto-cleanup
             period of a result and thus postpone its automatic removal. You can use this if you're not sure yet whether
             you want to keep it - you will have another {{ this.getExpiryPeriod() }} days to decide and will be notified
             (again) before deletion.
         </li>
         <li>
-            <span class="fas fa-archive"></span> <span class="font-weight-bold">Archive</span> will exclude a validation from auto-cleanup
+            <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span> <span class="font-weight-bold"> Archive</span> will exclude a validation from auto-cleanup
             and thus keep it indefinitely.
         </li>
         <li>
-            <span class="fas fa-calendar-alt"></span> <span class="font-weight-bold">Un-archive</span> will make a validation eligible for
+            <span class="pi pi-calendar"></span> <span class="font-weight-bold"> Un-archive</span> will make a validation eligible for
             auto-cleanup again. It will be automatically extended, so you will have another {{ this.getExpiryPeriod() }} days before
             deletion and will be notified (again).
         </li>
         <li>
-            <span class="fas fa-book"></span> <span class="font-weight-bold">Publish</span> will publish the result NetCDF
+            <span class="pi pi-book"></span> <span class="font-weight-bold"> Publish</span> will publish the result NetCDF
             file to <a target="_blank" href="https://zenodo.org/">Zenodo</a>. This means the results can be cited
             with a <a target="_blank" href="https://www.doi.org/">DOI</a>. See section
-            <a href="#publication">Publication</a> for details.
+            <a pageScroll [pageScrollDuration]="1" href="#publication">Publication</a> for details.
         </li>
     </ul>
 
