--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -6,7 +6,8 @@
           type="button"
           icon="faIcons.faStop"
           class="btn-action"
-          title="Cancel validation"
+          pTooltip="Cancel validation"
+          life="2000"
           (click)="stopValidation(validationRun.id)">
     <span><fa-icon [icon]="faIcons.faStop"></fa-icon></span>
   </button>
@@ -16,7 +17,8 @@
      type="button"
      icon="pi pi-folder-open"
      routerLink="/validation-result/{{validationRun.id}}"
-     title="View results">
+     pTooltip="View results"
+     life="2000">
   </a>
 
   <!--custom validations only-->
@@ -27,7 +29,8 @@
             pButton
             type="button"
             icon="pi pi-calendar"
-            title="Un-archive"
+            pTooltip="Un-archive"
+            life="2000"
             class="btn-action"
             (click)="archiveResults(validationRun.id, false)">
     </button>
@@ -36,7 +39,8 @@
             pButton
             type="button"
             icon="faIcons.faArchive"
-            title="Archive"
+            pTooltip="Archive"
+            life="2000"
             class="btn-action"
             (click)="archiveResults(validationRun.id, true)">
       <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span>
@@ -56,7 +60,8 @@
                 icon="pi pi-download"
                 label="Download Graphs"
                 (click)="downloadResultFile(validationRun.id, 'graphics',validationRun.id + '_graphs.zip')"
-                title="Download graphs .zip">
+                pTooltip="Download graphs as a .zip file"
+                life="2000">
         </button>
         <button pButton
                 type="button"
@@ -64,7 +69,8 @@
                 icon="faIcons.faFileDownload"
                 label="Download NetCDF File"
                 (click)="downloadResultFile(validationRun.id, 'netCDF', validationRun.output_file_name)"
-                title="Download validation run .nc file">
+                pTooltip="Download validation run results as a .nc file"
+                life="2000">
           <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
         </button>
       </div>
@@ -72,7 +78,8 @@
               routerLink="/validate/"
               class="dropdown-item"
               [queryParams]="{validation_id: validationRun.id}"
-              title="Load validation settings"
+              pTooltip="Loading settings will redirect you to the validate page"
+              life="2000"
               label="Load Validation Settings"
               icon="pi pi-replay">
       </button>
@@ -81,7 +88,8 @@
         <button pButton
                 type="button"
                 class="dropdown-item"
-                title="Remove this validation run"
+                pTooltip="Remove this validation run"
+                life="2000"
                 label="Delete Validation Run"
                 icon="pi pi-times"
                 (click)=deleteValidation(validationRun.id)>
@@ -92,7 +100,8 @@
                 label="Extend Life Span"
                 icon="pi pi-calendar-plus"
                 class="dropdown-item"
-                title="Extend lifespan of this validation run"
+                pTooltip="Extend lifespan of this validation run"
+                life="2000"
                 (click)=extendResults(validationRun.id)>
         </button>
       </span>
@@ -105,7 +114,8 @@
             routerLink="/validate/"
             class="btn-action"
             [queryParams]="{validation_id: validationRun.id}"
-            title="Load validation settings"
+            pTooltip="Load validation settings"
+            life="2000"
             icon="pi pi-replay">
       </button>
     <button *ngIf="isLogged && (isTrackedByTheUser$|async)"
@@ -113,7 +123,8 @@
             type="button"
             icon="pi pi-times"
             class="btn-action"
-            title="Remove this validation from your list"
+            pTooltip="Remove this validation from your list"
+            life="2000"
             (click)="removeValidation(validationRun.id)">
     </button>
     <button *ngIf="isLogged && !(isTrackedByTheUser$|async)"
@@ -121,7 +132,8 @@
             type="button"
             icon="pi pi-plus"
             class="btn-action"
-            title="Pin this validation. Pinning results gives a quick access to it."
+            pTooltip="Pin this validation. Pinning results gives a quick access to it."
+            life="2000"
             (click)="addValidation(validationRun.id)"
             onclick="">
     </button>
@@ -135,14 +147,16 @@
             icon="pi pi-download"
             class="btn-action"
             (click)="downloadResultFile(validationRun.id, 'graphics',validationRun.id + '_graphs.zip')"
-            title="Download graphs .zip">
+            pTooltip="Download graphs .zip"
+            life="2000">
     </button>
     <button pButton
             type="button"
             icon="faIcons.faFileDownload"
             class="btn-action"
             (click)="downloadResultFile(validationRun.id, 'netCDF', validationRun.output_file_name)"
-            title="Download validation run .nc file">
+            pTooltip="Download validation run .nc file"
+            life="2000">
       <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
     </button>
     <button *ngIf="isLogged"
@@ -150,7 +164,8 @@
             type="button"
             icon="pi pi-times"
             class="btn-action"
-            title="Remove this validation from your list"
+            pTooltip="Remove this validation from your list"
+            life="2000"
             (click)="removeValidation(validationRun.id)">
     </button>
   </span>
@@ -165,7 +180,8 @@
             type="button"
             icon="pi pi-times"
             class="btn-action-large"
-            title="Remove result"
+            pTooltip="Remove this validation run"
+            life="2000"
             label="Delete"
             (click)="deleteValidation(validationRun.id)">
     </button>
@@ -176,7 +192,8 @@
             icon="pi pi-calendar"
             class="btn-action-large"
             label="Un-archive"
-            title="Un-archive"
+            pTooltip="Un-archive"
+            life="2000"
             (click)="archiveResults(validationRun.id, false)">
     </button>
 
@@ -186,7 +203,8 @@
               icon="pi pi-calendar-plus"
               class="btn-action-large"
               label="Renew"
-              title="Extend lifespan"
+              pTooltip="Extend lifespan of this validation run"
+              life="2000"
               (click)="extendResults(validationRun.id)">
       </button>
       <button pButton
@@ -194,7 +212,8 @@
               icon="faIcons.faArchive"
               class="btn-action-large"
               label="Archive"
-              title="Archive"
+              pTooltip="Archived results are not removed automatically"
+              life="2000"
               (click)="archiveResults(validationRun.id, true)">
         <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span>
       </button>
@@ -206,7 +225,8 @@
             icon="pi pi-book"
             class="btn-action-large"
             label="Publish"
-            title="Publish on Zenodo"
+            pTooltip="Publish on Zenodo"
+            life="2000"
             data-toggle="modal"
             data-target="#publishDialog"
             (click)="open()">
@@ -220,7 +240,9 @@
        label="Load settings"
        routerLink="/validate/"
        [queryParams]="{validation_id: validationRun.id}"
-       title="Load settings"></a>
+       pTooltip="Loading settings will redirect you to the validate page"
+       life="2000">
+    </a>
 
     <div [ngClass]="{'collapse': !validationRun.publishing_in_progress}"
          style="float: right">
@@ -239,7 +261,8 @@
               type="button"
               icon="pi pi-copy"
               class="btn-action-large"
-              title="If you copy this validation, it will be added to the list of your validations with all the result files. You will have a full control over the copy."
+              pTooltip="If you copy this validation, it will be added to the list of your validations with all the result files. You will have a full control over the copy."
+              life="2000"
               label="Copy validation"
               (click)="copy(validationRun.id)">
       </button>
@@ -252,7 +275,8 @@
          label="Load settings"
          routerLink="/validate/"
          [queryParams]="{validation_id: validationRun.id}"
-         title="Load settings">
+         pTooltip="Load settings"
+         life="2000">
       </a>
 
       <button *ngIf="isLogged && (isTrackedByTheUser$|async) && !validationRun.is_unpublished"
@@ -261,7 +285,8 @@
               icon="pi pi-times"
               class="btn-action-large"
               label="Unpin validation"
-              title="Remove this validation from your list"
+              pTooltip="Remove this validation from your list"
+              life="2000"
               (click)="removeValidation(validationRun.id)">
       </button>
 
@@ -271,7 +296,8 @@
               type="button"
               icon="pi pi-plus"
               label="Pin validation"
-              title="Pinning results gives a quick access to it."
+              pTooltip="Pinning results gives a quick access to it."
+              life="2000"
               (click)="addValidation(validationRun.id)">
       </button>
 
